Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-89718

Coverity analysis defect 140718: Using invalid iterator

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • CAR Team 2024-05-13, CAR Team 2024-05-27
    • 1
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      Using invalid iterator

      Undefined behavior may result; the program may crash or subtly misbehave. An invalid or past-the-end iterator is being used
      /src/mongo/db/s/namespace_metadata_change_notifications.cpp:113: INVALIDATE_ITERATOR 140718 Calling "find" with element "token.nss" returns the end iterator.
      /src/mongo/db/s/namespace_metadata_change_notifications.cpp:113: INVALIDATE_ITERATOR 140718 Assigning: "mapIt" = "this->_notificationsList.find(token.nss)".
      /src/mongo/db/s/namespace_metadata_change_notifications.cpp:114: INVALIDATE_ITERATOR 140718 Dereferencing iterator "mapIt" though it is already past the end of its container.

            Assignee:
            enrico.golfieri@mongodb.com Enrico Golfieri
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: