SERVER-89718 Coverity analysis defect 140718: Using invalid iterator (#22865)

GitOrigin-RevId: 68e5130b2244e6755030ae5cff4eef5663b112ab